# grue

./: .gitattributes  .gitignore  README.md  build.py  pyproject.toml  tasks.py
src/grue/: __main__.py  cli.py  instruction.py  loader.py  logging.py  memory.py  opcodes.py  program.py  startup.py  txd.py
tests/: conftest.py  test_cli.py  test_grue.py  test_instruction.py  test_memory.py
