[tool.poetry]
name = "grue"
version = "0.1.0"
description = "A Minimal Z-Machine Implementation"
authors = ["Jeff Nyman <quendor.app@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jeffnyman/grue"
keywords = [
    "z-machine",
    "interpreter",
    "emulator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment"]

[tool.poetry.scripts]
grue = "grue.__main__:main"

[tool.black]
line-length = 90

[tool.flake8]
statistics = "true"
show-source = "false"
inline-quotes = "double"
max-line-length = 90
no-accept-encodings = "true"
docstring-convention = "google"
import-order-style = "appnexus"
application-names = "grue"
max-returns-amount = 5

# ANN101: Missing type annotation for self in method.
# D107: Missing docstring in __init__.
# D202: No blank lines allowed after function doctring.
# D212: Multi-line docstring summary should start at the first line.
# E203: Whitespace before ":"
extend-ignore = ["ANN101", "D107", "D202", "D212", "E203"]

# ANN001: Missing type annotation for function argument.
# D104: Missing docstring in public package.
per-file-ignores = [
    "*/__init__.py:D104",
    "tests/*:ANN001",
]

[tool.pytest.ini_options]
addopts = "--spec"
spec_test_format = "{result} {docstring_summary}"

[tool.mypy]

[[tool.mypy.overrides]]
module = "expects.*"
ignore_missing_imports = "true"

[tool.poetry.dependencies]
python = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pytest-spec = "^3.2.0"
expects = "^0.9.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
flake8-alphabetize = "^0.0.21"
flake8-annotations = "^3.0.1"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.5.9"
flake8-builtins = "^2.1.0"
flake8-coding = "^1.3.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-docstrings = "^1.7.0"
flake8-expression-complexity = "^0.0.11"
flake8-functions = "^0.0.8"
flake8-length = "^0.3.1"
flake8-pytest-style = "^1.7.2"
flake8-quotes = "^3.3.2"
flake8-return = "^1.2.0"
flake8-variables-names = "^0.0.5"
mypy = "^1.3.0"
invoke = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
