[tool.poetry]
name = "grue"
version = "0.1.0"
description = "A Minimal Z-Machine Implementation"
authors = ["Jeff Nyman <quendor.app@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jeffnyman/grue"
keywords = [
    "z-machine",
    "interpreter",
    "emulator",
    "infocom"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment"]

[tool.poetry.scripts]
grue = "grue.__main__:main"

[tool.pytest.ini_options]
addopts = "--spec"
spec_test_format = "{result} {docstring_summary}"

[tool.mypy]

[[tool.mypy.overrides]]
module = "expects.*"
ignore_missing_imports = "true"

[tool.poetry.dependencies]
python = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
invoke = "^2.1.3"
pytest = "^7.4.0"
pytest-spec = "^3.2.0"
expects = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
